logs/rtt.20260327-122311.log
   Compiling verus_builtin_macros v0.0.0-2026-03-17-2326 (/home/milnes/projects/verus/source/builtin_macros)
   Compiling vstd v0.0.0-2026-03-22-0106 (/home/milnes/projects/verus/source/vstd)
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent2)
error[E0433]: failed to resolve: could not find `std_specs` in `vstd`
  --> src/Chap64/SpanTreeMtEph.rs:14:15
   |
14 |     use vstd::std_specs::hash::obeys_key_model;
   |               ^^^^^^^^^ could not find `std_specs` in `vstd`
   |
note: found an item that was configured out
  --> /home/milnes/projects/verus/source/vstd/vstd.rs:83:9
   |
82 | #[cfg(verus_keep_ghost)]
   |       ---------------- the item is gated here
83 | pub mod std_specs;
   |         ^^^^^^^^^

error[E0432]: unresolved imports `crate::vstdplus::float::float::f64_add_spec`, `crate::vstdplus::float::float::f64_sub_spec`, `crate::vstdplus::float::float::f64_mul_spec`, `crate::vstdplus::float::float::f64_sqrt_spec`
  --> src/Chap26/ETSPMtEph.rs:42:18
   |
42 |         f64_add, f64_add_spec, f64_sub, f64_sub_spec,
   |                  ^^^^^^^^^^^^           ^^^^^^^^^^^^ no `f64_sub_spec` in `vstdplus::float::float`
   |                  |
   |                  no `f64_add_spec` in `vstdplus::float::float`
43 |         f64_mul, f64_mul_spec, f64_sqrt, f64_sqrt_spec,
   |                  ^^^^^^^^^^^^            ^^^^^^^^^^^^^ no `f64_sqrt_spec` in `vstdplus::float::float`
   |                  |
   |                  no `f64_mul_spec` in `vstdplus::float::float`

error[E0433]: failed to resolve: use of undeclared type `CycleDetectStEph`
   --> src/Chap55/TopoSortStEph.rs:883:12
    |
883 |         if CycleDetectStEph::has_cycle(graph) {
    |            ^^^^^^^^^^^^^^^^ use of undeclared type `CycleDetectStEph`
    |
help: consider importing this struct
    |
  8 +     use crate::Chap55::CycleDetectStEph::CycleDetectStEph::CycleDetectStEph;
    |

error[E0433]: failed to resolve: use of undeclared type `CycleDetectStPer`
   --> src/Chap55/TopoSortStPer.rs:692:12
    |
692 |         if CycleDetectStPer::has_cycle(graph) {
    |            ^^^^^^^^^^^^^^^^ use of undeclared type `CycleDetectStPer`
    |
help: consider importing this struct
    |
  8 +     use crate::Chap55::CycleDetectStPer::CycleDetectStPer::CycleDetectStPer;
    |

error[E0373]: closure may outlive the current function, but it borrows `v_clone`, which is owned by the current function
   --> src/Chap52/EdgeSetGraphMtPer.rs:217:17
    |
217 |                 |edge: &Pair<V, V>| {
    |                 ^^^^^^^^^^^^^^^^^^^ may outlive borrowed value `v_clone`
218 |                     let Pair(u, w) = edge;
219 |                     *u != v_clone && *w != v_clone
    |                           ------- `v_clone` is borrowed here
    |
note: function requires argument type to outlive `'static`
   --> src/Chap52/EdgeSetGraphMtPer.rs:216:29
    |
216 |               let new_edges = self.edges.filter(
    |  _____________________________^
217 | |                 |edge: &Pair<V, V>| {
218 | |                     let Pair(u, w) = edge;
219 | |                     *u != v_clone && *w != v_clone
220 | |                 },
221 | |                 Ghost(|p: (V::V, V::V)| p.0 != v@ && p.1 != v@),
222 | |             );
    | |_____________^
help: to force the closure to take ownership of `v_clone` (and any other referenced variables), use the `move` keyword
    |
217 |                 move |edge: &Pair<V, V>| {
    |                 ++++

Some errors have detailed explanations: E0373, E0432, E0433.
For more information about an error, try `rustc --explain E0373`.
error: could not compile `apas-verus` (lib) due to 5 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 5 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 14s
